--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+.app {
+    overflow: hidden;
+}
+
 /* Header is here! */
 .header {
     height: var(--header-height);
@@ -507,13 +511,29 @@
     margin: 0 8px;
 }
 
+.header__mobile-search {
+    position: relative;
+    padding: 8px 20px;
+    cursor: pointer;
+    display: none;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.header__mobile-search-icon {
+    font-size: 2.6rem;
+    color: #fff;
+    margin-left: -8px;
+}
+
 .header__logo {
     width: 200px;
 }
 
 .header__logo-link {
+    display: block;
     color: transparent;
     text-decoration: none;
+    line-height: 0;
 }
 
 .header__logo-img {
@@ -550,8 +570,9 @@
 
 .header__cart-wrap {
     display: inline-block;
-    padding: 0 12px;
+    padding: 2px 12px;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .header__cart-wrap:hover .header__cart-list{
@@ -581,6 +602,7 @@
     animation: headerNotifyGrowth ease-in .2s;
     cursor: default;
     z-index: 2;
+
 }
 
 .header__cart-list::after {
@@ -881,6 +903,99 @@
 
 .header__search-history-item a {
     font-size: 1.3rem;
+}
+
+/* Header sort bar */
+.header__sort-bar {
+    position: fixed;
+    top: var(--header-height);
+    left: 0;
+    right: 0;
+    height: 40px;
+    background-color: #fff;
+    margin: 0;
+    padding-left: 0;
+    border-top: 1px solid #e5e5e5;
+    display: none;
+}
+
+.header__sort-item {
+    flex: 1;
+}
+
+/* .header__sort-item:last-child::after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    top: 100%;
+} */
+
+.header__sort-item:last-child:hover .header__sort-list {
+    display: block;
+}
+
+.header__sort-item--active .header__sort-link{
+    color: var(--primary-color);
+    border-bottom: 2px solid #f66858;
+}
+
+.header__sort-link {
+    position: relative;
+    text-decoration: none;
+    color: #000;
+    font-size: 1.4rem;
+    display: block;
+    line-height: 40px;
+    height: 100%;
+    text-align: center;
+    cursor: pointer;
+}
+
+.header__sort-link::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    height: 60%;
+    border-left: 1px solid #e5e5e5;
+    transform: translateY(-50%);
+}
+
+.header__sort-item:first-child .header__sort-link::before {
+    display: none;
+}
+.header__sort-icon {
+    position: relative;
+    top: 0.2px;
+    margin-left: 6px;
+    color: #858b96;
+}
+
+.header__sort-list {
+    --fromY: -10px;
+    --toY: 0;
+    position: absolute;
+    top: 105%;
+    width: 100%;
+    background-color: #fff;
+    animation: fadeInFromTop ease-in-out .2s;
+    display: none;
+}
+
+.header__sort-list-cost {
+    font-size: 1.4rem;
+    line-height: 2.5rem;
+    padding: 4px 0;
+}
+
+.header__sort-list-cost:hover .header__sort-cost-link {
+    color: var(--primary-color);
+}
+
+.header__sort-cost-link {
+    display: block;
+    text-align: center;
 }
 
 /* App container */
@@ -1329,5 +1444,64 @@ i.home-product-item__like-icon-fill {
     color: #797979;
     font-size: 1.2rem;
     margin: auto;
+}
+
+/* Mobile category */
+.mobile-category {
+    margin-left: 5px;
+    display: none;
+}
+
+.mobile-category__list {
+    display: flex;
+    max-width: 100%;
+    overflow-x: auto;
+    /* height: 4rem; */
+    margin: 0;
+}
+
+.mobile-category__list::-webkit-scrollbar {
+    display: none;
+}
+
+.mobile-category__item {
+    overflow: hidden;
+    flex-shrink: 0;
+    border-radius: 4px;
+    margin-right: 10px;
+}
+
+.mobile-category__item:nth-child(3n + 1) .mobile-category__link {
+    background-color: #87afd8;
+}
+
+.mobile-category__item:nth-child(3n + 2) .mobile-category__link {
+    background-color: #76c9bd;
+}
+
+.mobile-category__item:nth-child(3n + 3) .mobile-category__link {
+    background-color: #88cf81;
+}
+
+.mobile-category__link {
+    margin: auto;
+    display: block;
+    color: #fff;
+    font-size: 1.4rem;
+    line-height: 4rem;
+    /* height: 4rem; */
+    text-align: center;
+    width: 102px;
+    font-weight: 300;
+    user-select: none;
+    -webkit-user-select: none;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding: 0 4px;
+    /* overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2; */ 
 }
 
