--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -19,9 +19,17 @@
         top: 0;
         z-index: 10;
     }
+    
+    .header__sort-bar {
+        display: flex;
+    }
 
     .app__container {
-        margin-top: var(--header-height);
+        margin-top: calc(var(--header-height) + 40px);
+    }
+
+    .app__content {
+        padding-top: 10px;
     }
 
     .header__cart {
@@ -36,12 +44,14 @@
     .header__cart-list::after {
         right: 2px;
     }
+
+    .mobile-category {
+        display: block;
+    }
 }
 
 /* mobile */
 @media (max-width: 46.1875em) {
-   
-
     .hide-on-mobile {
         display: none;
     }
@@ -65,6 +75,68 @@
         height: 25px;
         top: -20px;
         right: 20px;
+    }
+
+    .header-with-search {
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .header__search-checkbox:checked  ~ .header__search{
+        display: flex;
+    }
+
+    .header__search {
+        --fromY: -10px;
+        --toY: 0;
+        display: none;
+        position: fixed;
+        top: var(--header-height);
+        left: 0;
+        right: 0;
+        z-index: 1;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 2px;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+        padding: 0 16px;
+        animation: fadeInFromTop ease-in-out .3s;
+    }
+
+    .header__search-history {
+        position: fixed;
+        top: calc(var(--header-height) + 40px);
+        left: 0;
+        padding: 0 16px;
+        width: 100%;
+        
+    }
+
+    .header__logo,
+    .header__cart {
+        width: unset;
+    }
+
+    .header__cart {
+        margin-right: -8px;
+    }
+
+    .header__cart-list-items::-webkit-scrollbar {
+        display: none;
+    }
+
+    .header__mobile-search {
+        display: block;
+    }
+
+    
+    .pagination-item {
+        margin: 0 4px;
+    }
+
+    .pagination-item__link {
+        --height: 28px;
+        min-width: 34px;
+        font-size: 1.6rem;
     }
 }
 
