--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -10,7 +10,7 @@
     }
     
     .app {
-        margin-right: -15px;
+        /* margin-right: -15px; */
     }
 
     .header {
@@ -25,7 +25,7 @@
     }
 
     .app__container {
-        margin-top: calc(var(--header-height) + 40px);
+        margin-top: calc(var(--header-height) + 46px);
     }
 
     .app__content {
@@ -89,6 +89,7 @@
     .header__search {
         --fromY: -10px;
         --toY: 0;
+        height: 46px;
         display: none;
         position: fixed;
         top: var(--header-height);
@@ -104,7 +105,7 @@
 
     .header__search-history {
         position: fixed;
-        top: calc(var(--header-height) + 40px);
+        top: calc(var(--header-height) + 46px);
         left: 0;
         padding: 0 16px;
         width: 100%;
