--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -45,6 +45,18 @@
     .mobile-category {
         display: block;
     }
+
+    .home-product-item__sale-off {
+        padding-top: 0.1px;
+    }
+    .home-product-item__sale-off-percent {
+        line-height: 0.5rem;
+    }
+
+    .home-product-item__sale-off-label {
+        line-height: 0.5rem;
+        /* font-size: 1.1rem; */
+    }
 }
 
 /* mobile */
