--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -49,6 +49,11 @@
     .home-product-item__sale-off {
         padding-top: 0.1px;
     }
+
+    .home-product-item__sale-off {
+        padding: 0;
+    }
+
     .home-product-item__sale-off-percent {
         line-height: 0.5rem;
     }
