--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -45,7 +45,7 @@
     .mobile-category {
         display: block;
     }
-/* 
+
     .home-product-item__sale-off {
         padding-top: 0.1px;
     }
@@ -61,7 +61,7 @@
     .home-product-item__sale-off-label {
         line-height: 0.5rem;
         font-size: 1.1rem;
-    } */
+    }
 }
 
 /* mobile */
