--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -49,6 +49,11 @@
     .home-product-item__sale-off {
         padding: 0;
     }
+
+    .home-product-item__sale-off-label {
+        top: -10px;
+        /* font-size: 1.1rem; */
+    }
 }
 /* mobile */
 @media (max-width: 46.1875em) {
