--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -52,13 +52,13 @@
 
     /* .home-product-item__sale-off-percent {
         line-height: 0.5rem;
-    }
+    } */
 
     .home-product-item__sale-off-label {
-        line-height: 0.5rem;
+        /* line-height: 0.5rem; */
         top: -10px;
-        font-size: 1.1rem;
-    } */
+        /* font-size: 1.1rem; */
+    }
 }
 
 /* mobile */
