--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -56,7 +56,7 @@
 
     .home-product-item__sale-off-label {
         /* line-height: 0.5rem; */
-        top: -10px;
+        /* top: -10px; */
         /* font-size: 1.1rem; */
     }
 }
