--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,11 @@
     overflow: hidden;
 }
 
+.container {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+}
 /* Header is here! */
 .header {
     height: var(--header-height);
