--- a/assets/sass/_bill-content.scss
+++ b/assets/sass/_bill-content.scss
@@ -4,7 +4,7 @@ body {
     padding: 20px 0 70px 0;
 }
 
-.container {
+.container-body {
     display: grid;
     grid-template-columns: 0.15fr 0.85fr;
     grid-gap: 0 30px;
